2010-07-23:  0.6.0       -- use standard directories for cache and bookmarks file (e.g ~/.local/share/data and ~/.cache) obtained
	                    from QDesktopServices. Qt >= 4.4.0 is now required.
	                 -- added support for translations. Brazilian Portuguese, Finnish, French, Italian, Polish, Spanish and
	                    Ukrainian translations added.
	                 -- active web page and email links in 'About' dialog.
	                 -- shorten path names in 'Recently opened' menu.
	                 -- fixed regression: display image size info in statusbar.
	                 -- minor fixes for better portability; QComicBook should now compile and work (with limitations) on Windows.
	                 -- cmake build fix: make it possible to compile the program outside of the source directory.
	
2009-11-29:  0.5.0       -- implemented true continuous viewing mode. 'Continuous scrolling' option moved to 'View' menu.
	                 -- removed 'Forward two pages in two pages mode' option.
	                 -- cmake-based build system (replaces autoconf/automake).
	                 -- all windows/dialogs implemented via QtDesigner's .ui files and handled by uic.
	                 -- icons and splash screen are now handled by Qt resources system and compiled-in in the resulting
	                    qcomicbook executable. These files are no longer installed into share/data/qcomicbook directory.
	                 -- new, improved 'System Information' dialog.
	                 -- new splash screen (courtesy of Adam Mateja).
	                 -- fixed splash screen showing.
	                 -- lots of internal and architectural changes.

2009-09-16:  0.4.4       -- fixed bug in subdirectories handling that resulted in missing images

2009-09-04:  0.4.3       -- fixed bug with p7zip archiver detection that could result in crash when opening .7z archives

2009-09-02:  0.4.2       -- fixed compilation warnings (no return values in two methods)